<resources>
    <string name="app_name">MentalHealthApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="description">description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Search Fragment</string>
    <string name="title">Title</string>
    <string name="details">Details not yet implemented</string>
    <string name="tvLogin">Login</string>
    <string name="hintUserName">Username</string>
    <string name="butDone">Update</string>
    <string name="Password">Password</string>
    <string name="about">About</string>
    <string name="nav_header_title">Title</string>
    <string name="nav_header_subtitle">Sub Title</string>
    <string name="register">Register</string>
    <string name="find_doctor">Find doctor</string>
    <string name="connect_with_frends">Connect with Frends</string>
    <string name="tips_of_healthy_mind">Tips of healthy mind</string>
    <string name="contact_us">Contact us</string>
    <string name="error">Oops! invalid Username and Password</string>
    <string name="about_us">Welcome to mental health version 1.0 ,Having mental issue worry no more cause we got you.</string>
    <string name="butLogin">use google</string>
    <string name="notification_channel_id">mental_health</string>
    <string name="notification_title">Tell us,how are you feeling?.</string>
    <string name="snooze">snooze</string>
    <string name="ready">We are here for you.</string>
    <string name="notification_channel_description">Notification description</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="MAIN_ACTIVITY">main</string>
    <string name="intro_slide1_header">Welcome to Mental health care</string>
    <string name="intro_slide1_body">Let us take care of your mental health</string>
    <string name="intro_slide3_header">Keep track of your health</string>
    <string name="intro_slide3_body">Access your daily mental health record</string>
    <string name="intro_slide2_header">Get connected with friends</string>
    <string name="intro_slide2_body">Know how your friends are feeling</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="stats_fragment">Statistics Fragment</string>
    <string name="permission_location_rationale">Location Permission</string>
    <string name="tv_error">Please click add button to add your mood.</string>
    <string name="tvprofile">Edit Profile</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for therapist by typing your mental illness</string>
    <string name="full_name">Full Name</string>
</resources>